[TASK] Add language name to the API example

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <span>Default value:</span>
                         <code>default</code>
                      </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button type="astronaut">&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button type="astronaut"></burgton-button>
@@ -172,7 +172,7 @@
                         <span>Default value:</span>
                         <code>no attribute</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button label="Open" labelPosition="bottom">&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button label="Open" labelPosition="bottom"></burgton-button>
@@ -189,7 +189,7 @@
                         <span>Default value:</span>
                         <code>no attribute</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button label="Menu" labelPosition="top">&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button label="Menu" labelPosition="top"></burgton-button>
@@ -206,7 +206,7 @@
                         <span>Default value:</span>
                         <code>no attribute</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button targetSelectors="#circle-one, .circle-two" targetClasses="active, colorful">&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button targetSelectors="#circle-one, .circle-two" targetClasses="active, colorful"></burgton-button>
@@ -226,7 +226,7 @@
                         <span>Default value:</span>
                         <code>no attribute</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button targetSelectors="#circle-three" targetClasses="active">&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button targetSelectors="#circle-three" targetClasses="active"></burgton-button>
@@ -236,8 +236,8 @@
 
                 <div class="api__card">
                     <h4 class="api__title">NO ANIMATION <span class="api__specs">[attribute, optional]</span></h4>
-                    <p class="api__description">The <dfn>noAnimation</dfn> attribute disables the button animation.</p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__description">The <dfn>noAnimation</dfn> attribute disables the button animation, making the transition between inactive and active states immediate.</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button noAnimation>&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button noAnimation></burgton-button>
@@ -247,8 +247,8 @@
                 <div class="api__card">
                     <h4 class="api__title">DEBUG <span class="api__specs">[attribute, optional]</span></h4>
                     <p class="api__description">The <dfn>debug</dfn> attribute enables the debug mode.</p>
-                    <p class="api__description">When active, the debug mode will print on the console some information about the <span class="section__text--code">&lt;burgton-button></span>, which may help you find any problems.</p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__description">When active, the debug mode will print on the console some information about the <span class="section__text--code">&lt;burgton-button></span> which may help you find any problems.</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">html</span></p>
                     <pre class="api__example"><code class="language-html">&lt;burgton-button debug>&lt;/burgton-button></code></pre>
                     <div class="api__button-container">
                         <burgton-button debug></burgton-button>
@@ -270,7 +270,7 @@
                         <span>Default value:</span>
                         <code>#66cc99</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-line-color: tomato;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-1"></burgton-button>
@@ -286,7 +286,7 @@
                         <span>Default value:</span>
                         <code>#66cc99</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-line-color-active: purple;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-2"></burgton-button>
@@ -302,7 +302,7 @@
                         <span>Default value:</span>
                         <code>500ms</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-animation-duration: 1s;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-3"></burgton-button>
@@ -318,7 +318,7 @@
                         <span>Default value:</span>
                         <code>0s</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-animation-delay: 1s;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-4"></burgton-button>
@@ -334,7 +334,7 @@
                         <span>Default value:</span>
                         <code>ease-in-out</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-easing: linear;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-5"></burgton-button>
@@ -350,7 +350,7 @@
                         <span>Default value:</span>
                         <code>1</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-scale: 1.5;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-6"></burgton-button>
@@ -366,7 +366,7 @@
                         <span>Default value:</span>
                         <code>0px</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-border-radius: 2px;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-7"></burgton-button>
@@ -382,7 +382,7 @@
                         <span>Default value:</span>
                         <code>14px</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-label-font-size: 10px;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-8" label="Menu" labelPosition="bottom"></burgton-button>
@@ -398,7 +398,7 @@
                         <span>Default value:</span>
                         <code>#999999</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-label-font-color: tomato;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-9" label="Menu" labelPosition="bottom"></burgton-button>
@@ -414,7 +414,7 @@
                         <span>Default value:</span>
                         <code>#999999</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-label-font-color-active: purple;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-10" label="Menu" labelPosition="bottom"></burgton-button>
@@ -430,7 +430,7 @@
                         <span>Default value:</span>
                         <code>inherit</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-label-font-weight: 600;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-11" label="Menu" labelPosition="bottom"></burgton-button>
@@ -446,7 +446,7 @@
                         <span>Default value:</span>
                         <code>uppercase</code>
                     </p>
-                    <p class="api__example-title">Example:</p>
+                    <p class="api__example-title">Example:<span class="api__example-language">css</span></p>
                     <pre class="api__example"><code class="language-css">--burgton-button-label-text-transform: capitalize;</code></pre>
                     <div class="api__button-container">
                         <burgton-button id="api-css-12" label="Menu" labelPosition="bottom"></burgton-button>
