[TASK] Remove documentation for animation delay

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- burgton button -->
     <script src="node_modules/burgton-button/index.js" type="module"></script>
-    <!--    <script type="module" src="./burgton-button/index.js"></script>-->
+    <!--<script type="module" src="./burgton-button/index.js"></script>-->
 
     <!-- prismjs -->
     <script src="node_modules/prismjs/prism.js"></script>
@@ -156,6 +156,8 @@
                 You came to the right place...</p>
 
             <h3 class="section__subtitle" id="apiAttributes">Attributes</h3>
+            <p class="section__text">You can use some attributes to customize
+                your <span class="section__text--code">&lt;burgton-button></span></p>
 
             <div class="api__table">
                 <div class="api__table-header">
@@ -297,7 +299,7 @@
 
 
             <h3 class="section__subtitle" id="apiStyles">Styles</h3>
-            <p class="section__text section__subsection-description"><span class="section__text--code">&lt;burgton-button></span>
+            <p class="section__text"><span class="section__text--code">&lt;burgton-button></span>
                 exposes several CSS custom properties that you can use to further customize it.</p>
 
             <div class="api__table">
@@ -354,24 +356,6 @@
                 <div class="api__table-example">
                     <pre class="api__example"><code
                             class="language-css">--burgton-button-animation-duration: .75s;</code></pre>
-                </div>
-            </div>
-
-            <div class="api__table">
-                <div class="api__table-header">
-                    <p class="api__table-title">Property</p>
-                    <p class="api__table-title">Description</p>
-                    <p class="api__table-title">Valid Values</p>
-                    <p class="api__table-title">Default</p>
-                </div>
-                <div class="api__table-content">
-                    <p class="api__table-info api__table-info--type">--burgton-button-animation-delay</p>
-                    <p class="api__table-info">Set the animation delay</p>
-                    <p class="api__table-info">CSS time value</p>
-                    <p class="api__table-info">0s</p>
-                </div>
-                <div class="api__table-example">
-                    <pre class="api__example"><code class="language-css">--burgton-button-animation-delay: 750ms;</code></pre>
                 </div>
             </div>
 
@@ -523,7 +507,7 @@
 
 
             <h3 class="section__subtitle" id="apiMethods">Methods</h3>
-            <p class="section__text section__subsection-description"><span class="section__text--code">&lt;burgton-button></span>
+            <p class="section__text"><span class="section__text--code">&lt;burgton-button></span>
                 exposes several methods which you can call from you application.</p>
 
             <div class="api__table">
